package cl.ucn.disc.dsm.pictwin.backend.model;

//import jakarta.persistence.Entity;

//@Entity
public enum State {
    ACTIVE,
    BANNED
}
