package cl.ucn.disc.dsm.pictwin.backend.repository;



public interface CrudRepository {


}
