package cl.ucn.disc.dsm.pictwin.backend.repository;

import org.springframework.data.repository.CrudRepository;

public interface ListCrudRepository<U, L extends Number> extends CrudRepository{


}
